adapting to the new jpc code