@@ -16,13 +16,13 @@ public class JplBridge {
 	public static jpl.Term fromJpcToJpl(Term term) {
 		JplTermWriter jplTermWriter = new JplTermWriter();
 		term.read(jplTermWriter);
-		return jplTermWriter.getTerms().get(0);
+		return jplTermWriter.getFirst();
 	} 
 	
 	public static Term fromJplToJpc(jpl.Term term) {
 		JpcTermWriter jpcTermWriter = new JpcTermWriter();
 		new JplTermReader(term, jpcTermWriter).read();
-		return jpcTermWriter.getTerms().get(0);
+		return jpcTermWriter.getFirst();
 	} 
 
 }
